<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical">
    <RelativeLayout
            android:id="@+id/InnerRelativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button android:id="@+id/dotask_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/dotask" />
        <Button android:id="@+id/show_debug_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/debug"
                android:layout_alignParentRight="true"/>

        <EditText
                android:id="@+id/send_text"
                android:layout_below="@id/dotask_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sos" />

        <Button android:id="@+id/send_button"
                android:layout_below="@id/dotask_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/send"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:isScrollContainer="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical">
        <TextView android:id="@+id/output"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"/>
    </ScrollView>

</LinearLayout>
